--- a/page8.html
+++ b/page8.html
@@ -75,11 +75,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="ud0jPnR7IL" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="ud0kiMYBac" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ud0jPnR7IL" data-bs-target="#ud0jPnR7IL"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ud0jPnR7IL" data-bs-target="#ud0jPnR7IL"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ud0jPnR7IL" data-bs-target="#ud0jPnR7IL"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ud0kiMYBac" data-bs-target="#ud0kiMYBac"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ud0kiMYBac" data-bs-target="#ud0kiMYBac"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ud0kiMYBac" data-bs-target="#ud0kiMYBac"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -101,11 +101,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ud0jPnR7IL">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ud0kiMYBac">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ud0jPnR7IL">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ud0kiMYBac">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -153,7 +153,7 @@
         </div>
 
         <div class="text-wrapper align-left" data-form-type="formoid">
-          <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="FKgGlvxZg0AG2DGgMuwbaBqgsjm1Bxfn+O0Se9rQtb1ZO2zKGwA6zwXyUUdXWaHtdhhyX2EgazKgRjBdQG9CGX9Gy1cthE9LhvQH0FfoSOYuToNCvcKieVtJDZUgEAVf">
+          <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="t6b67GtsWa4x+amV7Z5eJqx97oS5ujAPPXcl6ne6vhp+QKRcuF3XTbLgm6vmw3vl6txKzCovWFAYvHUoAmRYYX8n1kHHP3ugzJOTJ8Rvweod4IaT29QmDdPLJm/VhxAF">
             <div class="row">
               <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Terima kasih sudah mendaftar!</div>
               <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -290,7 +290,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
