--- a/page15.html
+++ b/page15.html
@@ -58,7 +58,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html"><strong>Beranda</strong></a></li>
-                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page1.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Profil</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-711"><a class="dropdown-item text-black display-4" href="page6.html">Sejarah Sekolah</a><a class="dropdown-item text-black display-4" href="page8.html">Visi &amp; Misi</a><a class="dropdown-item text-black display-4" href="page7.html">Struktur Organisasi</a><a class="dropdown-item text-black display-4" href="page9.html">Data Guru &amp; Karyawan</a><a class="dropdown-item text-black display-4" href="page10.html">Identitas</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black show display-4" href="page4.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Akademik</strong></a><div class="dropdown-menu show" aria-labelledby="dropdown-346" data-bs-popper="none"><a class="dropdown-item text-black display-4" href="page11.html">Kegiatan</a></div></li>
+                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page1.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Profil</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-711"><a class="dropdown-item text-black display-4" href="page6.html">Sejarah Sekolah</a><a class="dropdown-item text-black display-4" href="page8.html">Visi &amp; Misi</a><a class="dropdown-item text-black display-4" href="page7.html">Struktur Organisasi</a><a class="dropdown-item text-black display-4" href="page9.html">Data Guru &amp; Karyawan</a><a class="dropdown-item text-black display-4" href="page10.html">Identitas</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page4.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Akademik</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-346"><a class="dropdown-item text-black display-4" href="page11.html">Kegiatan</a></div></li>
                     <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="index.html#pricing2-c" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Informasi</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-256"><a class="dropdown-item text-black display-4" href="page12.html">Pengumuman</a><a class="dropdown-item text-black display-4" href="page16.html">Pendaftaran PPDB</a></div>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page14.html"><strong>Galeri</strong></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page15.html"><strong>Kontak</strong></a></li></ul>
                 
@@ -88,7 +88,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-3 display-5">
                             <strong>Telepon</strong></h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:+62 822-38482535" class="text-primary">+62 822-38482535</a></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:+62 822-38482535" class="text-success">+62 822-38482535</a></p>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                         <h6 class="card-title mbr-fonts-style mb-3 display-5">
                             <strong>Email</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:smpn2huamual@gmail.com" class="text-primary">smpn2huamual@gmail.com</a>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:smpn2huamual@gmail.com" class="text-success">smpn2huamual@gmail.com</a>
                         </p>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
 	</div>
 </section>
 
-<section data-bs-version="5.1" class="social02 cid-ucVStbmVJS" id="social02-7h">
+<section data-bs-version="5.1" class="social02 cid-ud1nnvgbBZ" id="social02-83">
 	
 
 	
@@ -224,7 +224,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">AI Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
